--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,32 @@
 .container{
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    background-color: aqua;
 }
 .title{
     width:100%;
     max-width: 600px;
     margin: 2em 0;
+    flex-grow: 0;
+}
+.cat-img{
+    flex-grow: 1;
+    height: 100%;
+    width: 100%;
+    max-width: 800px;
+
+    text-align: center;
+    font-size: 80px;
+    font-weight: 900;
+    color: white;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: black;
+
+    background-image: url("imgs/p.png");
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
